# GccGame

./: .gitignore  CMakeLists.txt
include/: movement.h  renderer.h
src/: main.cpp  movement.cpp  renderer.cpp
